'增加throw'